<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_dashboard"
        android:title="@string/nav_dashboard" />
    
    <item
        android:id="@+id/nav_goals"
        android:icon="@drawable/ic_goals"
        android:title="@string/nav_goals" />
    
    <item
        android:id="@+id/nav_workouts"
        android:icon="@drawable/ic_workouts"
        android:title="@string/nav_workouts" />
    
    <item
        android:id="@+id/nav_analytics"
        android:icon="@drawable/ic_analytics"
        android:title="@string/nav_analytics" />
    
    <item
        android:id="@+id/nav_habits"
        android:icon="@drawable/ic_habits"
        android:title="@string/nav_habits" />
        
</menu> 